(Perl-compatible). In UTF8 corpora, all unicode properties, etc., can be used in regular expressions using the
usual PCRE syntax.

Other changes:

 - cwb-encode now validates the encoding of files as it imports them against the corpus character set. Invalid
   bytes or byte sequences lead to an abort. The default character set is Latin1, this can be changed with
   the -c option.
   
 - the Corpus Library (CL) has been reorganised to make programming against it easier, and it now contains 
   several more utility functions.

 - command-line editing backported from included Editline library to external GNU Readline (which was originally
   used by CQP but had to be replaced for licensing reasons before the CWB was made open-source)


Version 3.1
-----------

Version 3.1 of CWB (currently in beta) will run on Windows (currently, by cross-compilation on Linux using MinGW).
This was accomplished by incorporating back into the main code base changes made to a branch of CWB by Serge 
Heiden and colleagues on the Textometrie project. There are no other new features.


Version 3.0
-----------

This will be the first official release of the IMS Open Corpus Workbench.
 - released April 2010, after some testing by developer community (and perhaps an overhaul of installation procedure)
 - binary packages for various platforms (but not all) are available as well as the source.

New features:

 - Configuration no longer requires explicit knowledge of CPU endianness, relying instead on system macros
   htonl() and nothl() to convert between platform-independent disk format and native byte ordering.
   This simplifies compilation on generic Unix platforms and allows true Universal releases on Mac OS X.

 - cwb-encode now supports format validation and normalisation for feature set attributes (see CQP tutorial for
   and introduction).  Attributes declared with trailing slash "/" are considered as feature sets.  If a value